--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="navigation_title_settings">Settings</string>
     <string name="navigation_title_help">Help</string>
 
+    <string name="card_history_source">Source: %s</string>
     <string name="card_history_host">Host: %s</string>
     <string name="card_history_file">File: %s</string>
     <string name="card_history_time">%s</string>
