--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,11 +59,7 @@
     <string name="help_html">
     <![CDATA[
     <div>
-        <h1>Help</h1>
-        <h3>Title</h3>
-        <p>Chromecast does not support every video format, more info <a href="https://developers.google.com/cast/docs/media">here</a></p>
-        <h3>Title</h3>
-        <p>Lorem ipsum</p>
+        <h3>Coming soon</h3>
     </div>
     ]]>
     </string>
